# teknic_hardware

./: CMakeLists.txt  README.md  package.xml  teknic_hardware.xml
ExarKernelDriver/: Install_DRV_SCRIPT.sh  Makefile  driver_readme.txt  xr_usb_serial_common.c  xr_usb_serial_common.h  xr_usb_serial_hal.c
include/sFoundation/: TeknicDevID.h  ecAPI.h  lnkAccessAPI.h  mnDiags.h  mnErrors.h  mnParamDefs.h  pubCoreRegs.h  pubCpmAPI.h  pubCpmAdvAPI.h  pubCpmCls.h  pubCpmRegs.h  pubDataAcq.h  pubEtherCatApi.h  pubIQmath.h  pubIex.h  pubIscAPI.h  pubIscRegs.h  pubMLRegs.h  pubMnNetDef.h  pubMonPort.h  pubMotion.h  pubNetAPI.h  pubPwrReg.h  pubRegFldCommon.h  pubSysCls.h  tekTypes.h
include/teknic_hardware/: system.hpp  visibility_control.h
lib/x64/: MNuserDriver20.xml  libsFoundation20.so.1
src/: system.cpp
